Made sizes more responsive to fix flicker issue

--- a/src/css/protondbCard.css
+++ b/src/css/protondbCard.css
@@ -90,18 +90,18 @@
     float: right !important;
     right: 0;
     top: 0;
-    padding: 0px 3px !important;
+    padding: 0px 0.15rem !important;
     margin: 0 !important;
-    margin-left: 5px !important;
+    margin-left: 0.5rem !important;
     position: absolute;
     -webkit-transition: width 0.4s ease-in-out;
     -moz-transition: width 0.4s ease-in-out;
     -o-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
     overflow: hidden;
-    width: 0px !important;
+    width: 0rem !important;
     text-align: center;
-    text-indent: 100px !important;
+    text-indent: 100rem !important;
 }
 
 .proton_rating_search:hover {
@@ -109,12 +109,12 @@
     -moz-transition: width 0.4s ease-in-out;
     -o-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
-    width: 50px!important;
-    text-indent: 0px !important;
+    width: 2rem!important;
+    text-indent: 0vw !important;
 }
 
 #global_hover {
-    left: 880px!important;
+    left: 73rem!important;
 }
 
 .proton_rating_link_search {
